build_output_final.txt

> Configure project :
Fabric Loom: 1.15.4

> Task :compileJava UP-TO-DATE
> Task :processResources UP-TO-DATE
> Task :classes UP-TO-DATE

> Task :compileClientJava
C:\Users\frand\Documents\bomboaddons-1.21.10\src\client\java\me\bombo\bomboaddons\PestRenderer.java:6: error: cannot find symbol
import net.fabricmc.fabric.api.client.rendering.v1.WorldRenderContext;
                                                  ^
  symbol:   class WorldRenderContext
  location: package net.fabricmc.fabric.api.client.rendering.v1
C:\Users\frand\Documents\bomboaddons-1.21.10\src\client\java\me\bombo\bomboaddons\PestRenderer.java:7: error: cannot find symbol
import net.fabricmc.fabric.api.client.rendering.v1.WorldRenderEvents;
                                                  ^
  symbol:   class WorldRenderEvents
  location: package net.fabricmc.fabric.api.client.rendering.v1
C:\Users\frand\Documents\bomboaddons-1.21.10\src\client\java\me\bombo\bomboaddons\PestRenderer.java:28: error: cannot find symbol
    private static void onRender(WorldRenderContext context) {
                                 ^
  symbol:   class WorldRenderContext
  location: class PestRenderer
C:\Users\frand\Documents\bomboaddons-1.21.10\src\client\java\me\bombo\bomboaddons\PestRenderer.java:25: error: package WorldRenderEvents does not exist
        WorldRenderEvents.AFTER_ENTITIES.register(PestRenderer::onRender);
                         ^
C:\Users\frand\Documents\bomboaddons-1.21.10\src\client\java\me\bombo\bomboaddons\PestRenderer.java:101: error: cannot find symbol
            for (PlayerScoreEntry entry : scoreboard.listPlayerTrackedScores(sidebar)) {
                                                    ^
  symbol:   method listPlayerTrackedScores(Objective)
  location: variable scoreboard of type Scoreboard
5 errors

> Task :compileClientJava FAILED

[Incubating] Problems report is available at: file:///C:/Users/frand/Documents/bomboaddons-1.21.10/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileClientJava'.
> Compilation failed; see the compiler output below.
  C:\Users\frand\Documents\bomboaddons-1.21.10\src\client\java\me\bombo\bomboaddons\PestRenderer.java:6: error: cannot find symbol
  import net.fabricmc.fabric.api.client.rendering.v1.WorldRenderContext;
                                                    ^
    symbol:   class WorldRenderContext
    location: package net.fabricmc.fabric.api.client.rendering.v1
  C:\Users\frand\Documents\bomboaddons-1.21.10\src\client\java\me\bombo\bomboaddons\PestRenderer.java:7: error: cannot find symbol
  import net.fabricmc.fabric.api.client.rendering.v1.WorldRenderEvents;
                                                    ^
    symbol:   class WorldRenderEvents
    location: package net.fabricmc.fabric.api.client.rendering.v1
  C:\Users\frand\Documents\bomboaddons-1.21.10\src\client\java\me\bombo\bomboaddons\PestRenderer.java:28: error: cannot find symbol
      private static void onRender(WorldRenderContext context) {
                                   ^
    symbol:   class WorldRenderContext
    location: class PestRenderer
  C:\Users\frand\Documents\bomboaddons-1.21.10\src\client\java\me\bombo\bomboaddons\PestRenderer.java:101: error: cannot find symbol
              for (PlayerScoreEntry entry : scoreboard.listPlayerTrackedScores(sidebar)) {
                                                      ^
    symbol:   method listPlayerTrackedScores(Objective)

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.3.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.
    location: variable scoreboard of type Scoreboard
  C:\Users\frand\Documents\bomboaddons-1.21.10\src\client\java\me\bombo\bomboaddons\PestRenderer.java:25: error: package WorldRenderEvents does not exist
          WorldRenderEvents.AFTER_ENTITIES.register(PestRenderer::onRender);
                           ^
  5 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights from a Build Scan (powered by Develocity).

BUILD FAILED in 6s
3 actionable tasks: 1 executed, 2 up-to-date
